; ModuleID = '/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_remove_all_callbacks.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_remove_all_callbacks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }
%struct.evbuffer_cb_entry = type { i32 }

@next = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evbuffer*)* @evbuffer_remove_all_callbacks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @evbuffer_remove_all_callbacks(%struct.evbuffer* %0) #0 {
  %2 = alloca %struct.evbuffer*, align 8
  %3 = alloca %struct.evbuffer_cb_entry*, align 8
  store %struct.evbuffer* %0, %struct.evbuffer** %2, align 8
  br label %4

4:                                                ; preds = %9, %1
  %5 = load %struct.evbuffer*, %struct.evbuffer** %2, align 8
  %6 = getelementptr inbounds %struct.evbuffer, %struct.evbuffer* %5, i32 0, i32 0
  %7 = call %struct.evbuffer_cb_entry* @LIST_FIRST(i32* %6)
  store %struct.evbuffer_cb_entry* %7, %struct.evbuffer_cb_entry** %3, align 8
  %8 = icmp ne %struct.evbuffer_cb_entry* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %4
  %10 = load %struct.evbuffer_cb_entry*, %struct.evbuffer_cb_entry** %3, align 8
  %11 = load i32, i32* @next, align 4
  %12 = call i32 @LIST_REMOVE(%struct.evbuffer_cb_entry* %10, i32 %11)
  %13 = load %struct.evbuffer_cb_entry*, %struct.evbuffer_cb_entry** %3, align 8
  %14 = call i32 @mm_free(%struct.evbuffer_cb_entry* %13)
  br label %4

15:                                               ; preds = %4
  ret void
}

declare dso_local %struct.evbuffer_cb_entry* @LIST_FIRST(i32*) #1

declare dso_local i32 @LIST_REMOVE(%struct.evbuffer_cb_entry*, i32) #1

declare dso_local i32 @mm_free(%struct.evbuffer_cb_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
